Mon Mar  1 20:08:35 UTC 2010  Sumant Tambe  <sutambe@nospam>

          Moved LEESA from CoSMIC repository to here. For earlier
          Changelogs please see the CoSMIC repository at
          svn://svn.dre.vanderbilt.edu/CoSMIC

        * ChangeLog:
        * License:
        * bin:

        * bin/gen-meta.py:
        * bin/gen-pairs.pl:

        * doc:

        * doc/LEESA.docx:
        * doc/LEESA.pdf:

        * etc:

        * etc/DSL09primitives.cpp:
        * etc/DeploymentPlanVisitor.h:
        * etc/DeploymentPlanVisitor.cpp:
        * etc/LEESA.wxs:
        * etc/UdmMPL.h:
        * etc/UdmObjectConcept.h:
        * etc/concept-mpl.cpp:
        * etc/xsd:

        * etc/xsd/LEESA.h:
        * etc/xsd/LEESA.cpp:
        * etc/xsd/LEESAConcepts.h:
        * etc/xsd/LEESA_VisitorAsIndex.h:
        * etc/xsd/example:

        * etc/xsd/example/driver.cxx:
        * etc/xsd/example/library.hpp:
        * etc/xsd/example/library.xsd:
        * etc/xsd/example/library.cpp:
        * etc/xsd/example/library.xml:
        * etc/xsd/example/makefile.txt:
        * etc/xsd/example/xsd.sh:

        * etc/xsd/patch:

        * etc/xsd/patch/Readme.txt:
        * etc/xsd/patch/cli.hxx:
        * etc/xsd/patch/generator.cxx:
        * etc/xsd/patch/makefile.txt:
        * etc/xsd/patch/template-header.cxx:
        * etc/xsd/patch/template-header.hxx:

        * include:

        * include/LEESA:

        * include/LEESA/AP.cpp:
        * include/LEESA/Carrier_Optimized.h:
        * include/LEESA/Carrier_Optimized.cpp:
        * include/LEESA/Carrier_Simple.h:
        * include/LEESA/Concepts.h:
        * include/LEESA/Expression_Traits.h:
        * include/LEESA/Kind_Traits.h:
        * include/LEESA/LEESA.h:
        * include/LEESA/LEESA.cpp:
        * include/LEESA/LeftShift.cpp:
        * include/LEESA/Operators.cpp:
        * include/LEESA/RightShift.cpp:
        * include/LEESA/SP.cpp:
        * include/LEESA/SP_Accumulation.cpp: